# edict

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
edict/: __init__.py  cli.py  edict.lark  edict.py  functions.py  main.py  parse.py  program.py  program_base.py  protocols.py  stream.py  transform.py  types.py  utils.py
edict/protocols/: __init__.py  beancount.py  csv.py  hledger.py  pattern.py
examples/: accounting.edt  accounts.csv  test.edt
src/edict/: cli.py  edict.lark  edict.py  parse.py  protocols.py  types.py
tests/: test_applications.py  test_edict_cli.py  test_utils.py
tests/files/: accounting.edt  accounting.in.csv  accounting.out.csv  test-case-insensitive.edt  test-case-insensitive.in.csv  test-case-insensitive.out.csv  test-comments.edt  test-comments.out.csv  test-compare.edt  test-compare.in.csv  test-compare.out.csv  test-concat.edt  test-concat.in.csv  test-concat.out.csv  test-concatenate.edt  test-concatenate.in.csv  test-concatenate.out.csv  test-conditional-import.edt  test-conditional-import.in.csv  test-conditional-import.out.csv  test-conditional-replace.edt  test-conditional-replace.in.csv  test-conditional-replace.out.csv  test-conjunction.edt  test-conjunction.out.csv  test-decimal-separator-comma.in.csv  test-decimal-separator-comma.out.csv  test-disjunction.edt  test-disjunction.in.csv  test-disjunction.out.csv  test-division.edt  test-division.in.csv  test-division.out.csv  test-field-spaces.edt  test-field-spaces.in.csv  test-field-spaces.out.csv  test-hledger.in.csv  test-if-elif-else.edt  test-if-elif-else.in.csv  test-if-elif-else.out.csv  (+56 more)
tests/files/cli-test/: accounting.2.edt  accounting.2.out.csv  test-log.edt  test-log.in.csv
tests/files/extras/: test-import-order.edt
