# Setuptools
# ----------
# This is to be eventually migrated into pyproject.toml
# See https://github.com/pypa/setuptools/issues/1688
[metadata]
name = edict
version = 0.3.1
author = Eric Langlois
author_email = eric@langlois.xyz
description = Eric's Dictionary Transformer
long_description = file: README.md, LICENSE.txt
license =
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
	lark-parser

[options.entry_points]
console_scripts =
	edict = edict.cli:main

# Other Tools
# -----------

[flake8]
application-import-names=edict
import-order-style=google
select=C,E,F,W,B,B950
# E501 - strict line length. Instead use B950 allows exceeding by 10%
# W503 - line break before binary operator. PEP8 recommends the opposite now.
# E203 - whitespace before ':'. False positive bug in flake8
ignore=E501,W503,E203

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
skip_glob=*/third_party/*
known_third_party=lark,pkg_resources,pytest,setuptools

[tool:pytest]
# Don't show deprecation warning for dependencies
filterwarnings =
    ignore::DeprecationWarning
    default::DeprecationWarning:__main__
    default::DeprecationWarning:edict
    ignore::PendingDeprecationWarning
    default::PendingDeprecationWarning:__main__
    default::PendingDeprecationWarning:edict
